--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
     <div class="app-wrapper">
         <aside id="sidebar">
-            <div class="brand"><i class="fas fa-layer-group"></i> Redactor HTML Pro<</div>
+            <div class="brand"><i class="fas fa-layer-group"></i> Redactor HTML Pro</div>
             <button class="btn-new" onclick="createNewDraft()"><i class="fas fa-plus"></i> Nuevo</button>
             <ul class="file-list" id="fileList"></ul>
             
